Event Indexing Updates
Properly extract from Library Calendar and add to Solr and the database
Update JSON library